[gd_scene load_steps=33 format=3 uid="uid://d0nates4jdfv0"]

[ext_resource type="Script" uid="uid://ckrd04b8reh1d" path="res://main.gd" id="1_umwv5"]
[ext_resource type="PackedScene" uid="uid://bekk4p3ych8kn" path="res://mob.tscn" id="2_dduab"]
[ext_resource type="Script" uid="uid://btnx1a8jle7e3" path="res://ground.gd" id="3_3ildu"]
[ext_resource type="FontFile" uid="uid://c37xmbkgeafb3" path="res://FIGHTT3_.ttf" id="4_2ui0q"]
[ext_resource type="Texture2D" uid="uid://d2h6406qfkef6" path="res://vector-checker-pattern-black-white-2202943413.jpg" id="4_074og"]
[ext_resource type="Script" uid="uid://cb1s34kfskvqu" path="res://score_label.gd" id="5_y1vou"]
[ext_resource type="Shader" uid="uid://cjr50u5scjkk0" path="res://postprocess_outline.gdshader" id="6_4wjwq"]
[ext_resource type="Script" uid="uid://dhmt21rram7jc" path="res://combo_label.gd" id="6_ovsdx"]
[ext_resource type="LabelSettings" uid="uid://djm4g4p8bcdth" path="res://striveoutlinesmall.tres" id="8_074og"]
[ext_resource type="Script" uid="uid://o8f3mynfe7o1" path="res://audio_stream_player_3d.gd" id="8_hr2f2"]
[ext_resource type="FontFile" uid="uid://pgs7pq8fybjl" path="res://fonts/Impact - Strive.otf" id="10_074og"]
[ext_resource type="Script" uid="uid://1ykfqf7ma2g4" path="res://height_label.gd" id="10_hcdup"]
[ext_resource type="AudioStream" uid="uid://bxhvnwv2o3e53" path="res://art/special_trick.wav" id="11_2uh7t"]
[ext_resource type="Script" uid="uid://jogiuxcb8kap" path="res://progress_bar.gd" id="12_hxfaf"]
[ext_resource type="PackedScene" uid="uid://c31c4jpianrwe" path="res://player.tscn" id="13_f0js0"]
[ext_resource type="Script" uid="uid://1juyk6h0pc4q" path="res://jump_camera.gd" id="14_vnjr1"]
[ext_resource type="Shader" uid="uid://d1usemq5hmwf1" path="res://jump_camera.gdshader" id="15_2asur"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0yoeu"]
margin = 0.0
size = Vector3(30, 2, 30)

[sub_resource type="BoxMesh" id="BoxMesh_nxjah"]
lightmap_size_hint = Vector2i(604, 326)
size = Vector3(30, 2, 30)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uunw4"]
albedo_texture = ExtResource("4_074og")
albedo_texture_force_srgb = true
uv1_scale = Vector3(1.5, 1, 1)

[sub_resource type="Curve3D" id="Curve3D_f7ae2"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -13.0049, 0, -14.0084, 0, 0, 0, 0, 0, 0, 13.0071, 0, -14.0577, 0, 0, 0, 0, 0, 0, 12.9731, 0, 14.9604, 0, 0, 0, 0, 0, 0, -13.0328, 0, 14.9812, 0, 0, 0, 0, 0, 0, -13.0049, 0, -14.0084),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="BoxShape3D" id="BoxShape3D_nhq16"]
size = Vector3(144, 13, 144)

[sub_resource type="BoxMesh" id="BoxMesh_ny6cy"]
size = Vector3(144, 6, 144)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v7ng0"]
render_priority = 0
shader = ExtResource("6_4wjwq")
shader_parameter/depth_threshold = 0.2
shader_parameter/depth_normal_threshold_scale = 0.2
shader_parameter/normal_threshold = 0.2
shader_parameter/edge_color = Color(0, 0, 0, 1)
shader_parameter/scale = 1.0

[sub_resource type="QuadMesh" id="QuadMesh_hcefh"]
material = SubResource("ShaderMaterial_v7ng0")
size = Vector2(2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ab8ks"]
albedo_color = Color(1, 0.698039, 0.0980392, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_o1t3t"]
material = SubResource("StandardMaterial3D_ab8ks")

[sub_resource type="Theme" id="Theme_8atg6"]
default_font = ExtResource("4_2ui0q")
default_font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_82xsv"]
font = ExtResource("10_074og")
font_size = 620
font_color = Color(1, 1, 1, 0.305882)
shadow_size = 81
shadow_color = Color(0, 0, 0, 0.337255)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xvij5"]
shader = ExtResource("15_2asur")
shader_parameter/pixel_size = 4
shader_parameter/screen_size = Vector2(1920, 1080)
shader_parameter/squishedness = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_57vgq"]
shader = ExtResource("15_2asur")
shader_parameter/pixel_size = 4
shader_parameter/screen_size = Vector2(1920, 1080)
shader_parameter/squishedness = 0.2

[sub_resource type="QuadMesh" id="QuadMesh_ysfas"]
material = SubResource("ShaderMaterial_57vgq")
flip_faces = true
size = Vector2(2, 2)

[node name="Main" type="Node"]
script = ExtResource("1_umwv5")
mob_scene = ExtResource("2_dduab")

[node name="Ground" type="AnimatableBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0
script = ExtResource("3_3ildu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_0yoeu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_nxjah")
surface_material_override/0 = SubResource("StandardMaterial3D_uunw4")

[node name="GPUParticlesCollisionBox3D" type="GPUParticlesCollisionBox3D" parent="Ground"]
size = Vector3(30, 2, 30)

[node name="SpawnPath" type="Path3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
curve = SubResource("Curve3D_f7ae2")

[node name="SpawnLocation" type="PathFollow3D" parent="Ground/SpawnPath"]
transform = Transform3D(0.00189526, 0, -0.999998, 0, 1, 0, 0.999998, 0, 0.00189526, -13.0049, 0, -14.0084)

[node name="KillboxArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10, 0)
collision_layer = 8

[node name="Killbox" type="CollisionShape3D" parent="KillboxArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6, 0)
shape = SubResource("BoxShape3D_nhq16")

[node name="MeshInstance3D" type="MeshInstance3D" parent="KillboxArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6, 0)
visible = false
mesh = SubResource("BoxMesh_ny6cy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 5.96046e-08, 1, 0, -1, 5.96046e-08, 0, 14, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("13_f0js0")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 55.769)
projection = 1
fov = 37.8493
size = 26.087

[node name="MeshInstance3D" type="MeshInstance3D" parent="CameraPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 1.41421, -6.27209)
visible = false
extra_cull_margin = 449.91
mesh = SubResource("QuadMesh_hcefh")
skeleton = NodePath("../../..")

[node name="Cylinders" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, -14)
mesh = SubResource("CylinderMesh_o1t3t")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 15)
mesh = SubResource("CylinderMesh_o1t3t")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, -14)
mesh = SubResource("CylinderMesh_o1t3t")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, 15)
mesh = SubResource("CylinderMesh_o1t3t")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="UserInterface" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8atg6")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
z_index = -161
layout_mode = 0
offset_left = 27.0
offset_top = 19.0
offset_right = 264.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
label_settings = ExtResource("8_074og")
script = ExtResource("5_y1vou")

[node name="ComboLabel" type="Label" parent="UserInterface"]
z_index = -241
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 22.0
offset_right = -38.0
offset_bottom = 52.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Combo: 0
Best: 0"
label_settings = ExtResource("8_074og")
script = ExtResource("6_ovsdx")

[node name="HeightLabel" type="Label" parent="UserInterface"]
visible = false
z_index = -120
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"
label_settings = SubResource("LabelSettings_82xsv")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_hcdup")

[node name="Retry" type="ColorRect" parent="UserInterface"]
z_index = -55
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="Label" type="Label" parent="UserInterface/Retry"]
z_index = -1
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = -165.0
offset_right = 85.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
text = "Press Enter to restart!"
label_settings = ExtResource("8_074og")

[node name="Label2" type="Label" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -120.0
offset_right = 233.0
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressBar" type="ProgressBar" parent="UserInterface"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 215.0
grow_vertical = 2
fill_mode = 3
show_percentage = false
script = ExtResource("12_hxfaf")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("11_2uh7t")
script = ExtResource("8_hr2f2")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_xvij5")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="JumpCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30)
projection = 1
size = 23.047
script = ExtResource("14_vnjr1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="JumpCamera"]
visible = false
mesh = SubResource("QuadMesh_ysfas")

[connection signal="combo" from="Player" to="." method="_on_player_combo"]
[connection signal="combo" from="Player" to="UserInterface/ComboLabel" method="_on_player_combo"]
[connection signal="height" from="Player" to="." method="_on_player_height"]
[connection signal="height" from="Player" to="CameraPivot/Camera3D" method="_on_player_height"]
[connection signal="height" from="Player" to="UserInterface/ScoreLabel" method="_on_player_height"]
[connection signal="height" from="Player" to="UserInterface/HeightLabel" method="_on_player_height"]
[connection signal="height" from="Player" to="UserInterface/ProgressBar" method="_on_player_height"]
[connection signal="height" from="Player" to="JumpCamera" method="_on_player_height"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="stunt" from="Player" to="AudioStreamPlayer3D" method="_on_player_stunt"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
